Pages de restaurant avec les animations

--- a/restaurants/a-la-francaise.html
+++ b/restaurants/a-la-francaise.html
@@ -47,86 +47,194 @@
             </div>
 
             <section class="menu-part">
-                <div class="menu-part__title-contener">
+                <div class="menu-part__title-contener mvt-1">
                     <h2 class="menu-part__title">ENTRÉES</h2>
                     <div class="menu-part__line"></div>
                 </div>
-                <article class="dish">
-                    <h3 class="dish__title">Tartare de poulpe acidulé</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Aux zestes d'orange</p>
-                        <p class="dish__price">25€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_1-1" type="checkbox">
+                    <label for="dish_1-1">
+                        <div class="dish mvt-2">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Tartare de poulpe acidulé</h3>
+                                <p class="dish__subtitle">Aux zestes d'orange</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">25€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
-                <article class="dish">
-                    <h3 class="dish__title">Velouté de légumes d'antan</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Carotte, panais, topinambour</p>
-                        <p class="dish__price">35€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_1-2" type="checkbox">
+                    <label for="dish_1-2">
+                        <div class="dish mvt-3">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Velouté de légumes d'antan</h3>
+                                <p class="dish__subtitle">Carotte, panais, topinambour</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">35€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
-                <article class="dish">
-                    <h3 class="dish__title">Soupe à l'oignon</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Revisitée</p>
-                        <p class="dish__price">20€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_1-3" type="checkbox">
+                    <label for="dish_1-3">
+                        <div class="dish mvt-4">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Soupe à l'oignon</h3>
+                                <p class="dish__subtitle">Revisitée</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">20€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
             </section>
 
             <section class="menu-part">
-                <div class="menu-part__title-contener">
+                <div class="menu-part__title-contener mvt-5">
                     <h2 class="menu-part__title">PLATS</h2>
                     <div class="menu-part__line"></div>
                 </div>
-                <article class="dish">
-                    <h3 class="dish__title">Coquilles Saint-Jacques</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Accompagnées d'une purée de panais</p>
-                        <p class="dish__price">40€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_2-1" type="checkbox">
+                    <label for="dish_2-1">
+                        <div class="dish mvt-6">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Coquilles Saint-Jacques</h3>
+                                <p class="dish__subtitle">Accompagnées d'une purée de panais</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">40€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
-                <article class="dish">
-                    <h3 class="dish__title">Magret de canard</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Et parmentier de pommes de terre</p>
-                        <p class="dish__price">35€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_2-2" type="checkbox">
+                    <label for="dish_2-2">
+                        <div class="dish mvt-7">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Magret de canard</h3>
+                                <p class="dish__subtitle">Et parmentier de pommes de terre</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">35€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
-                <article class="dish">
-                    <h3 class="dish__title">Pigeonneau d'Ille-et-Vilaine</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Sur son lit de gnocchis aux légumes</p>
-                        <p class="dish__price">44€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_2-3" type="checkbox">
+                    <label for="dish_2-3">
+                        <div class="dish mvt-8">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Pigeonneau d'Ille-et-Vilaine</h3>
+                                <p class="dish__subtitle">Sur son lit de gnocchis aux légumes</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">44€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
             </section>
 
             <section class="menu-part">
-                <div class="menu-part__title-contener">
+                <div class="menu-part__title-contener mvt-9">
                     <h2 class="menu-part__title">DESSERTS</h2>
                     <div class="menu-part__line"></div>
                 </div>
-                <article class="dish">
-                    <h3 class="dish__title">Pétales de violettes glacés</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Et purée de noisettes</p>
-                        <p class="dish__price">18€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_3-1" type="checkbox">
+                    <label for="dish_3-1">
+                        <div class="dish mvt-10">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Pétales de violettes glacés</h3>
+                                <p class="dish__subtitle">Et purée de noisettes</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">18€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
-                <article class="dish">
-                    <h3 class="dish__title">Fondant au chocolat</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Revisité</p>
-                        <p class="dish__price">22€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_3-2" type="checkbox">
+                    <label for="dish_3-2">
+                        <div class="dish mvt-11">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Fondant au chocolat</h3>
+                                <p class="dish__subtitle">Revisité</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">22€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
-                <article class="dish">
-                    <h3 class="dish__title">Millefeuille croustillant</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Myrtilles et pâte d'amande</p>
-                        <p class="dish__price">23€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_3-3" type="checkbox">
+                    <label for="dish_3-3">
+                        <div class="dish mvt-12">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Millefeuille croustillant</h3>
+                                <p class="dish__subtitle">Myrtilles et pâte d'amande</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">23€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
 
                 <div class="button-contener">
