--- a/restaurants/le-delice-des-sens.html
+++ b/restaurants/le-delice-des-sens.html
@@ -47,86 +47,194 @@
             </div>
 
             <section class="menu-part">
-                <div class="menu-part__title-contener">
+                <div class="menu-part__title-contener mvt-1">
                     <h2 class="menu-part__title">ENTRÉES</h2>
                     <div class="menu-part__line"></div>
                 </div>
-                <article class="dish">
-                    <h3 class="dish__title">Tartare de thon</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Assaisonné au yuzu</p>
-                        <p class="dish__price">25€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_1-1" type="checkbox">
+                    <label for="dish_1-1">
+                        <div class="dish mvt-2">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Tartare de thon</h3>
+                                <p class="dish__subtitle">Assaisonné au yuzu</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">25€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
-                <article class="dish">
-                    <h3 class="dish__title">Bouchée de homard croustillant</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Et sa farandole de petits légumes</p>
-                        <p class="dish__price">35€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_1-2" type="checkbox">
+                    <label for="dish_1-2">
+                        <div class="dish mvt-3">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Bouchée de homard croustillant</h3>
+                                <p class="dish__subtitle">Et sa farandole de petits légumes</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">35€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
-                <article class="dish">
-                    <h3 class="dish__title">Poulet rôti aux herbes de Provence</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Et sa crème de truffe</p>
-                        <p class="dish__price">40€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_1-3" type="checkbox">
+                    <label for="dish_1-3">
+                        <div class="dish mvt-4">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Poulet rôti aux herbes de Provence</h3>
+                                <p class="dish__subtitle">Et sa crème de truffe</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">40€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
             </section>
 
             <section class="menu-part">
-                <div class="menu-part__title-contener">
+                <div class="menu-part__title-contener mvt-5">
                     <h2 class="menu-part__title">PLATS</h2>
                     <div class="menu-part__line"></div>
                 </div>
-                <article class="dish">
-                    <h3 class="dish__title">Poulet rôti aux herbes de Provence</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Et sa crème de truffe</p>
-                        <p class="dish__price">40€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_2-1" type="checkbox">
+                    <label for="dish_2-1">
+                        <div class="dish mvt-6">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Poulet rôti aux herbes de Provence</h3>
+                                <p class="dish__subtitle">Et sa crème de truffe</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">40€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
-                <article class="dish">
-                    <h3 class="dish__title">Langouste rôtie</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Et ses légumes de saison</p>
-                        <p class="dish__price">35€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_2-2" type="checkbox">
+                    <label for="dish_2-2">
+                        <div class="dish mvt-7">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Langouste rôtie</h3>
+                                <p class="dish__subtitle">Et ses légumes de saison</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">35€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
-                <article class="dish">
-                    <h3 class="dish__title">Côte de bœuf Angus</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Et sa purée de panais</p>
-                        <p class="dish__price">44€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_2-3" type="checkbox">
+                    <label for="dish_2-3">
+                        <div class="dish mvt-8">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Côte de bœuf Angus</h3>
+                                <p class="dish__subtitle">Et sa purée de panais</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">44€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
             </section>
 
             <section class="menu-part">
-                <div class="menu-part__title-contener">
+                <div class="menu-part__title-contener mvt-9">
                     <h2 class="menu-part__title">DESSERTS</h2>
                     <div class="menu-part__line"></div>
                 </div>
-                <article class="dish">
-                    <h3 class="dish__title">Œuf au plat</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Assaisonné à la truffe sur lit de caviar</p>
-                        <p class="dish__price">76€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_3-1" type="checkbox">
+                    <label for="dish_3-1">
+                        <div class="dish mvt-10">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Œuf au plat</h3>
+                                <p class="dish__subtitle">Assaisonné à la truffe sur lit de caviar</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">76€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
-                <article class="dish">
-                    <h3 class="dish__title">Crème brulée</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Revisitée</p>
-                        <p class="dish__price">22€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_3-2" type="checkbox">
+                    <label for="dish_3-2">
+                        <div class="dish mvt-11">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Crème brulée</h3>
+                                <p class="dish__subtitle">Revisitée</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">22€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
-                <article class="dish">
-                    <h3 class="dish__title">Tiramisu</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">À la noisette</p>
-                        <p class="dish__price">23€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_3-3" type="checkbox">
+                    <label for="dish_3-3">
+                        <div class="dish mvt-12">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Tiramisu</h3>
+                                <p class="dish__subtitle">À la noisette</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">23€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
 
                 <div class="button-contener">
