--- a/index.html
+++ b/index.html
@@ -39,20 +39,22 @@
                 <div class="meat-1"></div>
                 <div class="meat-2"></div>
                 <div class="vegetable"></div>
-                <div class="steam-1">
-                    <div class="steam-part-1"></div>
-                    <div class="steam-part-2"></div>
-                    <div class="steam-part-3"></div>
-                </div>
-                <div class="steam-2">
-                    <div class="steam-part-1"></div>
-                    <div class="steam-part-2"></div>
-                    <div class="steam-part-3"></div>
-                </div>
-                <div class="steam-3">
-                    <div class="steam-part-1"></div>
-                    <div class="steam-part-2"></div>
-                    <div class="steam-part-3"></div>
+                <div class="steam">
+                    <div class="steam-1">
+                        <div class="steam-part-1"></div>
+                        <div class="steam-part-2"></div>
+                        <div class="steam-part-3"></div>
+                    </div>
+                    <div class="steam-2">
+                        <div class="steam-part-1"></div>
+                        <div class="steam-part-2"></div>
+                        <div class="steam-part-3"></div>
+                    </div>
+                    <div class="steam-3">
+                        <div class="steam-part-1"></div>
+                        <div class="steam-part-2"></div>
+                        <div class="steam-part-3"></div>
+                    </div>
                 </div>
             </div>
             <div class="bell">
