--- a/restaurants/la-note-enchantee.html
+++ b/restaurants/la-note-enchantee.html
@@ -47,93 +47,213 @@
             </div>
 
             <section class="menu-part">
-                <div class="menu-part__title-contener">
+                <div class="menu-part__title-contener mvt-1">
                     <h2 class="menu-part__title">ENTRÉES</h2>
                     <div class="menu-part__line"></div>
                 </div>
-                <article class="dish">
-                    <h3 class="dish__title">Ravioles de foie gras</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Accompagnées de leur crème à la truffe</p>
-                        <p class="dish__price">25€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_1-1" type="checkbox">
+                    <label for="dish_1-1">
+                        <div class="dish mvt-2">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Ravioles de foie gras</h3>
+                                <p class="dish__subtitle">Accompagnées de leur crème à la truffe</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">25€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
-                <article class="dish">
-                    <h3 class="dish__title">Caviar osciètre</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Sur blini à la farine de blé noir</p>
-                        <p class="dish__price">35€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_1-2" type="checkbox">
+                    <label for="dish_1-2">
+                        <div class="dish mvt-3">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Caviar osciètre</h3>
+                                <p class="dish__subtitle">Sur blini à la farine de blé noir</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">35€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
-                <article class="dish">
-                    <h3 class="dish__title">Homard et espuma de potiron</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Marinés aux zestes d'orange</p>
-                        <p class="dish__price">20€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_1-3" type="checkbox">
+                    <label for="dish_1-3">
+                        <div class="dish mvt-4">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Homard et espuma de potiron</h3>
+                                <p class="dish__subtitle">Marinés aux zestes d'orange</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">20€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
-                <article class="dish">
-                    <h3 class="dish__title">Foie gras de canard cuit entier</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Confiture de figue et pain toasté</p>
-                        <p class="dish__price">35€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_1-4" type="checkbox">
+                    <label for="dish_1-4">
+                        <div class="dish mvt-5">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Foie gras de canard cuit entier</h3>
+                                <p class="dish__subtitle">Confiture de figue et pain toasté</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">35€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
             </section>
 
             <section class="menu-part">
-                <div class="menu-part__title-contener">
+                <div class="menu-part__title-contener mvt-6">
                     <h2 class="menu-part__title">PLATS</h2>
                     <div class="menu-part__line"></div>
                 </div>
-                <article class="dish">
-                    <h3 class="dish__title">Noix de coquilles Saint-Jacques</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Sur lit de purée de céleri-rave</p>
-                        <p class="dish__price">40€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_2-1" type="checkbox">
+                    <label for="dish_2-1">
+                        <div class="dish mvt-7">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Noix de coquilles Saint-Jacques</h3>
+                                <p class="dish__subtitle">Sur lit de purée de céleri-rave</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">40€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
-                <article class="dish">
-                    <h3 class="dish__title">Langoustine poêlée</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Purée de patate douce</p>
-                        <p class="dish__price">35€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_2-2" type="checkbox">
+                    <label for="dish_2-2">
+                        <div class="dish mvt-8">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Langoustine poêlée</h3>
+                                <p class="dish__subtitle">Purée de patate douce</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">35€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
-                <article class="dish">
-                    <h3 class="dish__title">Mijoté de queue de bœuf</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Et riz sauvage aux zestes de citron</p>
-                        <p class="dish__price">45€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_2-3" type="checkbox">
+                    <label for="dish_2-3">
+                        <div class="dish mvt-9">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Mijoté de queue de bœuf</h3>
+                                <p class="dish__subtitle">Et riz sauvage aux zestes de citron</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">45€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
             </section>
 
             <section class="menu-part">
-                <div class="menu-part__title-contener">
+                <div class="menu-part__title-contener mvt-10">
                     <h2 class="menu-part__title">DESSERTS</h2>
                     <div class="menu-part__line"></div>
                 </div>
-                <article class="dish">
-                    <h3 class="dish__title">Macaron noisette et chocolat</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Glace au caramel brun et sel de Guérande</p>
-                        <p class="dish__price">18€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_3-1" type="checkbox">
+                    <label for="dish_3-1">
+                        <div class="dish mvt-11">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Macaron noisette et chocolat</h3>
+                                <p class="dish__subtitle">Glace au caramel brun et sel de Guérande</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">18€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
-                <article class="dish">
-                    <h3 class="dish__title">Baba au rhum revisité</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Avec son coulis de citron</p>
-                        <p class="dish__price">22€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_3-2" type="checkbox">
+                    <label for="dish_3-2">
+                        <div class="dish mvt-12">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Baba au rhum revisité</h3>
+                                <p class="dish__subtitle">Avec son coulis de citron</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">22€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
-                <article class="dish">
-                    <h3 class="dish__title">Tarte au citron meringuée</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Déstructurée</p>
-                        <p class="dish__price">23€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_3-3" type="checkbox">
+                    <label for="dish_3-3">
+                        <div class="dish mvt-13">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Tarte au citron meringuée</h3>
+                                <p class="dish__subtitle">Déstructurée</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">23€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
 
                 <div class="button-contener">
