--- a/restaurants/la-palette-du-gout.html
+++ b/restaurants/la-palette-du-gout.html
@@ -47,86 +47,194 @@
             </div>
 
             <section class="menu-part">
-                <div class="menu-part__title-contener">
+                <div class="menu-part__title-contener mvt-1">
                     <h2 class="menu-part__title">ENTRÉES</h2>
                     <div class="menu-part__line"></div>
                 </div>
-                <article class="dish">
-                    <h3 class="dish__title">Fricassée d'escargots</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Au piment d'Espelette</p>
-                        <p class="dish__price">25€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_1-1" type="checkbox">
+                    <label for="dish_1-1">
+                        <div class="dish mvt-2">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Fricassée d'escargots</h3>
+                                <p class="dish__subtitle">Au piment d'Espelette</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">25€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
-                <article class="dish">
-                    <h3 class="dish__title">Foie gras de canard mi-cuit</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Et ses copeaux de truffe noire</p>
-                        <p class="dish__price">35€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_1-2" type="checkbox">
+                    <label for="dish_1-2">
+                        <div class="dish mvt-3">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Foie gras de canard mi-cuit</h3>
+                                <p class="dish__subtitle">Et ses copeaux de truffe noire</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">35€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
-                <article class="dish">
-                    <h3 class="dish__title">Œuf au plat</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Assaisonné à la truffe sur lit de caviar</p>
-                        <p class="dish__price">20€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_1-3" type="checkbox">
+                    <label for="dish_1-3">
+                        <div class="dish mvt-4">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Œuf au plat</h3>
+                                <p class="dish__subtitle">Assaisonné à la truffe sur lit de caviar</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">20€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
             </section>
 
             <section class="menu-part">
-                <div class="menu-part__title-contener">
+                <div class="menu-part__title-contener mvt-5">
                     <h2 class="menu-part__title">PLATS</h2>
                     <div class="menu-part__line"></div>
                 </div>
-                <article class="dish">
-                    <h3 class="dish__title">Filet de bœuf aux herbes</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Accompagné de sa ribambelle de légumes</p>
-                        <p class="dish__price">40€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_2-1" type="checkbox">
+                    <label for="dish_2-1">
+                        <div class="dish mvt-6">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Filet de bœuf aux herbes</h3>
+                                <p class="dish__subtitle">Accompagné de sa ribambelle de légumes</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">40€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
-                <article class="dish">
-                    <h3 class="dish__title">Parmentier de queue de bœuf</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">À la trruffe noire sur sa purée de panais</p>
-                        <p class="dish__price">35€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_2-2" type="checkbox">
+                    <label for="dish_2-2">
+                        <div class="dish mvt-7">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Parmentier de queue de bœuf</h3>
+                                <p class="dish__subtitle">À la trruffe noire sur sa purée de panais</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">35€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
-                <article class="dish">
-                    <h3 class="dish__title">Filet de turbot</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Aux agrumes</p>
-                        <p class="dish__price">44€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_2-3" type="checkbox">
+                    <label for="dish_2-3">
+                        <div class="dish mvt-8">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Filet de turbot</h3>
+                                <p class="dish__subtitle">Aux agrumes</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">44€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
             </section>
 
             <section class="menu-part">
-                <div class="menu-part__title-contener">
+                <div class="menu-part__title-contener mvt-9">
                     <h2 class="menu-part__title">DESSERTS</h2>
                     <div class="menu-part__line"></div>
                 </div>
-                <article class="dish">
-                    <h3 class="dish__title">Paris-Brest</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Revisité</p>
-                        <p class="dish__price">18€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_3-1" type="checkbox">
+                    <label for="dish_3-1">
+                        <div class="dish mvt-10">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Paris-Brest</h3>
+                                <p class="dish__subtitle">Revisité</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">18€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
-                <article class="dish">
-                    <h3 class="dish__title">Macaron au chocolat d'exception</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Et glace à la vanille de Madagascar</p>
-                        <p class="dish__price">22€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_3-2" type="checkbox">
+                    <label for="dish_3-2">
+                        <div class="dish mvt-11">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Macaron au chocolat d'exception</h3>
+                                <p class="dish__subtitle">Et glace à la vanille de Madagascar</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">22€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
-                <article class="dish">
-                    <h3 class="dish__title">Mousse au chocolat</h3>
-                    <div class="dish__contener">
-                        <p class="dish__subtitle">Au piment d'Espelette et à la truffe noire</p>
-                        <p class="dish__price">23€</p>
-                    </div>
+                <article class="dish_contener">
+                    <input class="check-dish" id="dish_3-3" type="checkbox">
+                    <label for="dish_3-3">
+                        <div class="dish mvt-12">
+                            <div class="dish__txt">
+                                <h3 class="dish__title">Mousse au chocolat</h3>
+                                <p class="dish__subtitle">Au piment d'Espelette et à la truffe noire</p>
+                            </div>
+                            <div class="dish__price-contener">
+                                <p class="dish__price">23€</p>
+                            </div>
+                            <div class="dish__selector">
+                                <div class="dish__check-circle">
+                                    <i class="dish__check fa-solid fa-sm fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
                 </article>
 
                 <div class="button-contener">
